<resources>
    <string name="app_name">スマセン</string>
    <string name="title">スマセン</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="zero">0 %</string>
    <string name="percentage">%d %%</string>
    <string name="plname">プレイヤーさん</string>
    <string name="enename">敵県</string>
    <string name="osaka">大阪</string>
    <string name="hyougo">兵庫</string>
    <string name="kyoto">京都</string>
    <string name="siga">滋賀</string>
    <string name="mie">三重</string>
    <string name="wakayama">和歌山</string>
    <string name="nara">奈良</string>
    <string name="textmessage">よく来たな、ここでは兵士の育成が行えるぞ。</string>
    <string name="textsmall">小育成か、成果は少ないが短時間で育成が完了できるぞ。</string>
    <string name="textmiddle">中育成か、ほどほどな成果を得ることができて時間も長すぎないちょうどいい育成だな。</string>
    <string name="textlarge">大育成だな、時間はかかるがそれ相応の成果が期待できる。途中で終了してしまう可能性も高くなるが...</string>
    <string name="startAttack">進行開始</string>
    <string name="itm01">----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">"DataStore"</string>
    <string name="大阪">osaka</string>
    <string name="userForce">ユーザの兵力</string>
    <string name="wonCount">進行成功数</string>
    <string name="lostCount">進行失敗回数</string>
    <string name="losingCount">連続進行失敗数</string>
    <string name="LcampCount">大育成成功回数</string>
    <string name="volumeIntroduce">下のバーで音量調整</string>
</resources>