<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosePrefectureActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/none"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background__3_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_background__3_" />

    <ImageView
        android:id="@+id/Kinkitihou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kinkichihou"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@drawable/kinkichihou" />


    <Button
        android:id="@+id/hyougo_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/hyougo"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.257" />

    <Button
        android:id="@+id/kyoto_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/kyoto"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/siga_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/siga"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/osaka_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/osaka"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/nara_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/nara"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/mie_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/mie"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/wakayama_bt"
        android:layout_width="79dp"
        android:layout_height="127dp"
        android:background="@color/none"
        android:fontFamily="@font/gkktt851"
        android:text="@string/wakayama"
        android:textColor="@color/light_blue_600"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Kinkitihou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/Kinkitihou"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gkktt851"
        android:text="Player"
        android:textColor="#2863DA"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/enemie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gkktt851"
        android:text="enemy name"
        android:textColor="#ED1414"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/Text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gkktt851"
        android:text="VS"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/attackbutton2"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/font"
        android:text="攻撃開始"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/backbutton2"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/font"
        android:text="←戻る"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


</androidx.constraintlayout.widget.ConstraintLayout>