<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheatModeActivity">

    <EditText
        android:id="@+id/editUserForce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userForce"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/wonCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userForce"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/userForce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userForce"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editUserForce"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp" />

    <EditText
        android:id="@+id/editWonCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wonCount"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lostCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wonCount"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editLostCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lostCount"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/losingCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lostCount"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editLosingCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/losingCount"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/largeCampCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losingCount"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editLcampCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LcampCount"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/largeCampCount"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="変更"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="640dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="リセット"
        app:layout_constraintEnd_toStartOf="@+id/backButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editDataButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="640dp" />

    <TextView
        android:id="@+id/wonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wonCount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editWonCount"
        app:layout_constraintTop_toBottomOf="@+id/editUserForce"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp" />

    <TextView
        android:id="@+id/lostCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lostCount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editLostCount"
        app:layout_constraintTop_toBottomOf="@+id/editWonCount"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp" />

    <TextView
        android:id="@+id/losingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losingCount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editLosingCount"
        app:layout_constraintTop_toBottomOf="@+id/editLostCount"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="135dp" />

    <TextView
        android:id="@+id/largeCampCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LcampCount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editLcampCount"
        app:layout_constraintTop_toBottomOf="@+id/editLosingCount"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="135dp" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="戻る"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="637dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
